tests/fail/fail7.sps
(import (yuni scheme)
        (yunitest mini))

(check-equal #t #f)

(check-finish)
